@@ -1,7 +1,8 @@
-#!/bin/bash
+#!/bin/bash -e
 # Boot Disk maker for TFTP prototcol.
 # Eric Delaunay, February 1998.
 # Ben Collins, March 2000,2002
+# Thiemo Seufer, 03-12-2003
 # This is free software under the GNU General Public License.
 
 # May also be set in Makefile
@@ -10,7 +11,7 @@ arch=${architecture:-$(dpkg --print-architecture)}
 
 # Print a usage message and exit if the argument count is wrong.
 if [ $# != 4 ]; then
-echo "Usage: "$0" linux.bin sys_map.gz root-image tftpimage" 1>&2
+echo "Usage: $0 linux.bin sys_map.gz root-image tftpimage" 1>&2
 	cat 1>&2 << EOF
 
 	linux.bin: the Linux kernel (may be compressed).
@@ -34,7 +35,7 @@ rootimage=$3
 # Set this to the name of the TFTP image
 tftpimage=$4
 
-# make sure the files are available
+# Make sure the files are available, $sysmap can be /dev/null
 for file in "$kernel" "$rootimage"; do
 	if [ ! -f $file ]; then
 		echo "error: could not find $file"
@@ -42,56 +43,47 @@ for file in "$kernel" "$rootimage"; do
 	fi
 done
 
-tmp=`mktemp -d -p ${tmpdir} tftpboot.XXXXXX`
-
-
-debug () {
-    # either debug or the special verbose var can turn this on
-    echo "D: " $* 1>&2 || true
-}
-
-
-if [ "$arch" = arm ] || [ "$arch" == i386 ] || [ "$arch" == mips ] || [ "$arch" == mipsel ]; then
-	cp $kernel $tmp/image
-	zcat < $sysmap > $tmp/sysmap
-else
+case "$arch" in
+    arm | i386 | mips | mipsel)
+	cp $kernel $tftpimage.tmp
+	;;
+    *)
 	echo "uncompressing kernel"
-	zcat $kernel > $tmp/image
-fi
+	gzip -cd $kernel > $tftpimage.tmp
+	;;
+esac
 
 echo "building tftp image in $tftpimage"
-cp $tmp/image $tftpimage
+tmp=`mktemp -p ${tmpdir} tftpboot.sysmap.XXXXXXXX`
+gzip -cdq $sysmap > $tmp || true
 
 # append rootimage to the kernel
-if [ "$arch" = sparc ]; then
-	elftoaout -o $tftpimage.tmp $tftpimage
-	zcat $sysmap > $tmp/sysmap
+case "$arch" in
+    sparc)
+	elftoaout -o $tftpimage $tftpimage.tmp
 	case $tftpimage in
-		*sun4u*) piggyback=piggyback64 ;;
-		*) piggyback=piggyback ;;
+	    *sun4u*) piggyback=piggyback64 ;;
+	    *) piggyback=piggyback ;;
 	esac
 	# Piggyback appends the ramdisk to the a.out image in-place
-	$piggyback $tftpimage.tmp $tmp/sysmap $rootimage
-	mv $tftpimage.tmp $tftpimage
-	rm -f $tmp/sysmap
-elif [ "$arch" = arm ]; then
-	if (grep -q "ARCH_CATS=y" $tmp/sysmap ); then
-		catsboot $tftpimage.tmp $tftpimage $rootimage
-		mv $tftpimage.tmp $tftpimage
+	$piggyback $tftpimage $tmp $rootimage
+	;;
+    arm)
+	if (grep -q "ARCH_CATS=y" $tmp); then
+		catsboot $tftpimage $tftpimage.tmp $rootimage
 	fi
-	if (grep -q "ARCH_NETWINDER=y" $tmp/sysmap); then
+	if (grep -q "ARCH_NETWINDER=y" $tmp); then
 		cat $rootimage >>$tftpimage
 	fi
-elif [ "$arch" = "mipsel" ]; then
-		addinitrd $tftpimage $rootimage $tftpimage.tmp
-		mv $tftpimage.tmp $tftpimage
-elif [ "$arch" = "mips" ]; then
-		/usr/sbin/tip22 $tftpimage $rootimage $tftpimage.tmp
-		mv $tftpimage.tmp $tftpimage
-fi
+	;;
+    mipsel) t-rex -k $tftpimage.tmp -r $rootimage -o $tftpimage ;;
+    mips) tip22 $tftpimage.tmp $rootimage $tftpimage ;;
+    *) mv $tftpimage.tmp $tftpimage ;;
+esac
 
 # cleanup
-rm -fr $tmp
+rm -f $tftpimage.tmp
+rm -f $tmp
 
 size=`ls -l $tftpimage | awk '{print $5}'` || true
 rem=`expr \( 4 - $size % 4 \) % 4` || true
